--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,5 @@
-.DS_Store
-
-
-application/cache/*
-!application/cache/index.html
-
-application/logs/*
-!application/logs/index.html
-
-!application/*/.htaccess
-
-application/cache/*
-application/language/*
-application/libraries/*
-application/third_party/*
-application/core/*
-application/hooks/*
-application/libraries/*
-system/
-vendor/
-.git/
-
-
-composer.lock
-
-user_guide_src/*
-
-vendor/
-
-# IDE Files
-#-------------------------
-/nbproject/
-.idea/*
-
-## Sublime Text cache files
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-*.sublime-workspace
-*.sublime-project
-/tests/tests/
-/tests/results/
+/system
+/user_guide
+/vendor
+/.git
+.gitignore
